--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Front End Developer Web Page</title>
-    <link href='https://fonts.googleapis.com/css?family=Jura' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7b13737f2a.js" crossorigin="anonymous"></script>
 </head>
@@ -184,7 +183,7 @@
                         <p>Far far away, behind the word mountains, far from</p>
                         <form action="#">
                             <div class="form-field">
-                                <input type="text" class="form-control" placeholder="Enter yout email">
+                                <input type="email" class="form-control" placeholder="Enter yout email" required>
                                 <div class="subscribe-btn">
                                     <i class="fa-solid fa-arrow-right"></i>
                                 </div>
@@ -198,23 +197,15 @@
                         <p>© 2017 <a href="https://uicookies.com/"> uiCookies:Green.</a> Designed by <a href="https://uicookies.com/">uicookies.com</a></p>
                     </div>
                     <div class="f-3">
-                        <!-- <ul> -->
-                            <!-- <li> -->
-                                <a href="#">
-                                    <i class="fa-brands fa-twitter"></i>
-                                </a>
-                            <!-- </li> -->
-                            <!-- <li> -->
-                                <a href="#">
-                                    <i class="fa-brands fa-square-facebook"></i>
-                                </a>
-                            <!-- </li> -->
-                            <!-- <li> -->
-                                <a href="#">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </a>
-                            <!-- </li> -->
-                        <!-- </ul> -->
+                        <a href="#">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-square-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
                     </div>
                 </div>
             </div>
